--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -22,6 +22,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('gn') }}">Evénements</a></li>
 						<li><a href="{{ path('groupe.place') }}">Places disponibles</a></li>
+						<li><a href="{{ path('joueur.xp') }}">Points d'expériences</a></li>
 						<li><a href="{{ path('user.list') }}">Liste des utilisateurs</a></li>
 						<li><a href="{{ path('user.right') }}">Gestion des droits</a></li>
 					</ul>
@@ -71,6 +72,33 @@
 				</li>
 			{% endif %}
 			
+			{% if is_granted('ROLE_USER', app.user) %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joueur<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						{% if app.user.personnage %}
+							<li><a href="{{ path('personnage.detail',{'index': app.user.personnage.id}) }}">Mon personnage</a></li>
+						{% else %}
+							<li><a href="{{ path('personnage.add') }}">Création de mon personnage</a></li>
+						{% endif %}
+						{% if app.user.joueur %}
+							<li><a href="{{ path('joueur.detail',{'index': app.user.joueur.id}) }}">Mes informations</a></li>
+						{% endif %}
+						{% if app.user.groupe %}
+							<li><a href="{{ path('groupe.joueur',{'index':app.user.groupe.id}) }}">Mon groupe</a></li>
+							{% if app.user.isResponsable(app.user.groupe) %}
+								<li><a href="{{ path('groupe.gestion',{'index':app.user.groupe.id}) }}">Gestion du groupe</a></li>
+								<li><a href="#">Diplomatie</a></li>								
+							{% endif %}
+							<li><a href="#">Contacter le scénariste</a></li>
+						{% endif %}
+						
+						<li><a href="#">Les compétences</a></li>
+						<li><a href="#">Les classes</a></li>
+					</ul
+				</li>
+			{% endif %}
+			
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Compte<span class="caret"></span></a>
 				<ul class="dropdown-menu">
@@ -82,7 +110,7 @@
 						<li><a href="{{ path('user.register') }}">Créer un compte</a></li>
 					{%  endif %}
 				</ul>
-			</li>		
+			</li>	
 						
 			{% if is_granted('ADMIN_USER', app.user) %}
 			<li class="dropdown">
