--- a/src/LarpManager/Views/personnage/competence.twig
+++ b/src/LarpManager/Views/personnage/competence.twig
@@ -11,7 +11,7 @@
 			<legend>{{ personnage.nom }} - <small>Achat d'une compétence</small></legend>
 			
 			<ul class="list-group">
-				<li class="list-group-item">Vous disposez de <strong>{{ personnage.joueur.xp }}</strong> Points d'expériences.</li>
+				<li class="list-group-item">Vous disposez de <strong>{{ personnage.xp }}</strong> Points d'expériences.</li>
 				<li class="list-group-item">Vos compétences favorites sont : {{ personnage.classe.competenceFamilyFavorites|join(', ') }}</li>
 				<li class="list-group-item">Vos compétences normales sont : {{ personnage.classe.competenceFamilyNormales|join(', ') }}</li>
 				<li class="list-group-item">Les autres compétences sont méconnue</li>
@@ -19,7 +19,7 @@
 	
 			{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
 
-			{{ form_row(form.competence) }}
+			{{ form_row(form.competenceId) }}
 			{{ form_rest(form) }}
 		</fieldset>
 	</form>
