--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -95,6 +95,7 @@
 						
 						<li><a href="#">Les compétences</a></li>
 						<li><a href="#">Les classes</a></li>
+						<li><a href="{{ path('world') }}">Le monde</a></li>
 					</ul
 				</li>
 			{% endif %}
