--- a/src/LarpManager/Views/competence/add.twig
+++ b/src/LarpManager/Views/competence/add.twig
@@ -6,7 +6,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				<a href="{{ path("competence") }}">Retour à la liste des compétences</a>
+				<a href="{{ path("competence.family") }}">Retour à la liste des compétences</a>
 				{{ include("competence/fragment/form.twig",{
 					'legend': 'Ajout d\'une compétence',
 					'action': path('competence.add'), 
