--- a/src/LarpManager/Views/competence/detail.twig
+++ b/src/LarpManager/Views/competence/detail.twig
@@ -8,7 +8,7 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-8">
 		
-			<a href="{{ path("competence") }}">Retour à la liste des compétences</a>
+			<a href="{{ path("competence.family") }}">Retour à la liste des compétences</a>
 						
 			<div class="well well-sm bs-component">
 				<h4>
