--- a/web/css/style.css
+++ b/web/css/style.css
@@ -16,6 +16,19 @@ body {
 	border-top: 0 !important;
 }
 
+.svg-content { 
+	display: inline-block;
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+.map {
+	display: block;
+	background: url("../img/hyboree.svg")no-repeat left left;
+	height: 500px;
+}
+
 #footer {
   position: absolute;
   bottom: 0;
