--- a/src/LarpManager/Views/homepage/world.twig
+++ b/src/LarpManager/Views/homepage/world.twig
@@ -2,14 +2,10 @@
 
 {% block content %}
 
-
-	<div class="map">
+<div class="container container--ph">
+	<iframe class="iframe--responsive" src="{{ app.request.basepath }}/img/hyboree.svg">
+		<h3>error</h3>
+	</iframe>
+</div>
 
 {% endblock content %}
-
-{% block javascript %}
-	{{ parent() }}
-	<script>
-		map = new L.Map('map');
-	</script
-{% endblock javascript %}
