--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,13 +21,24 @@ body {
 	position: relative;
 	top: 0;
 	left: 0;
+	width: 100%;
 }
 
-.map {
-	display: block;
-	background: url("../img/hyboree.svg")no-repeat left left;
-	height: 500px;
+.container--ph {
+  height: 0;
+  padding-top: 48%;
+  position: relative;
 }
+
+.iframe--responsive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none; /* get rid of the border */
+}
+
 
 #footer {
   position: absolute;
