Gestion des religions par le scénariste.

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -38,6 +38,7 @@
 						<li><a href="{{ path('langue') }}">Langues</a></li>
 						<li><a href="{{ path('groupe') }}">Groupes</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
+						<li><a href="{{ path('religion') }}">Religions</a></li>
 					</ul>
 				</li>
 			{% endif %}
