--- a/src/LarpManager/Views/religion/add.twig
+++ b/src/LarpManager/Views/religion/add.twig
@@ -5,9 +5,9 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("langue/fragment/form.twig",{
-					'legend' : 'Ajout d\'une langue',
-					'action': path('langue.add'), 
+				{{ include("religion/fragment/form.twig",{
+					'legend' : 'Ajout d\'une religion',
+					'action': path('religion.add'), 
 					'form' : form}) }}
 			</div>
 		</div>
