--- a/src/LarpManager/Views/religion/update.twig
+++ b/src/LarpManager/Views/religion/update.twig
@@ -1,13 +1,12 @@
 {% extends "layout.twig" %}
 
 {% block content %}
-
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("langue/fragment/form.twig",{
-					'legend' : 'Ajout d\'une langue',
-					'action': path('langue.add'), 
+				{{ include("religion/fragment/form.twig",{
+					'legend': 'Modification d\'une religion',
+					'action': path('religion.update',{'index': religion.id}),
 					'form' : form}) }}
 			</div>
 		</div>
