work in progress :)

--- a/src/LarpManager/Views/homepage/index.twig
+++ b/src/LarpManager/Views/homepage/index.twig
@@ -82,6 +82,9 @@
 					<div class="panel-heading">{% trans %}gn_subscribe_title{% endtrans %}</div>
 					<div class="panel-body">
 						<p>{% trans %}gn_subscribe_explain{% endtrans %}</p>
+						{% for gn in gns %}
+							{{ include("homepage/fragment/gn.twig",{'gn': gn}) }}
+						{% endfor %}
 					</div>
 				</div>
 				
