--- a/src/LarpManager/Views/joueur/add.twig
+++ b/src/LarpManager/Views/joueur/add.twig
@@ -8,7 +8,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
 				{{ include("joueur/fragment/form.twig",{
-					'legend': 'Ajout d\'un joueur',
+					'legend': 'Enregistrement de vos informations',
 					'action': path('joueur.add'), 
 					'form' : form}) }}
 			</div>
