--- a/src/LarpManager/Views/forum/fragment/topic_list.twig
+++ b/src/LarpManager/Views/forum/fragment/topic_list.twig
@@ -1,26 +1,31 @@
-<div class="well">
-	<h5>
-		Forum
-		<small><a href="{{ path('forum.topic.add.form', {'index':topicId}) }}">Ajouter un nouveau sous-forum</a></small>
-	</h5>
+
 	<ul class="list-group">
 		{%  for topic in topics %}
 		<li class="list-group-item">
 			
 			<h4 class="list-group-item-heading">
-				<a href="{{ path('forum.topic.post', {index: topic.id}) }}">{{ topic.title }}</a>
-
+				<a href="{{ path('forum.topic', {index: topic.id}) }}">{{ topic.title }}</a>
 			</h4>
-					
-			{% if topic.description %}
-				<p class="list-group-item-text text-default">{{ topic.description }}</p>
-			{%  endif %}
-			
-			Nombre de message dans ce topic
-			Dernier message date/heure/utilisateur
-			Lien vers les sous-forums
-			
+				
+			<p class="list-group-item-text text-default">
+				<div class="row">
+					<div class="col-xs-8 col-md-8">	
+						{{ topic.description|default('pas de description') }}
+					</div>
+					<div class="col-xs-4 col-md-4">			
+						<span class="badge">Messages {{ topic.posts|length }}</span>
+						
+						{% if topic.topics|length > 0 %}
+							{% for t in topic.topics %}
+								<span>{{ t.title }}</span>
+							{% endfor %}
+							{% set lastTopic = topic.topics|last %}
+							{{ lastTopic.updateDate|date('Y-m-d') }}
+							par {{ lastTopic.user.username }}
+						{% endif %}
+					</div>
+				</div>
+			</p>
 		</li>
 		{%  endfor %}
 	</ul>
-</div>
