--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -77,7 +77,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joueur<span class="caret"></span></a>
 					<ul class="dropdown-menu">
-						<li><a href="{{ path('forum.topic') }}">Forum</a></li>
+						<li><a href="{{ path('forum') }}">Forum</a></li>
 						{% if app.user.joueur %}
 							<li><a href="{{ path('joueur.detail',{'index': app.user.joueur.id}) }}">Mes informations</a></li>
 							{% if app.user.groupes %}
