--- a/src/LarpManager/Views/forum/post_response.twig
+++ b/src/LarpManager/Views/forum/post_response.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="{{ app.request.basepath }}/css/meltdown.css" />
 {% endblock head %}
 
-{% block title %}Forum - Saisie d'un message{% endblock title %}
+{% block title %}Forum - Répondre à un message{% endblock title %}
 
 {% block content %}
 
@@ -17,9 +17,30 @@
 			{# le formulaire pour saisir son message #}
 			<div class="col-xs-12 col-md-8">
 				{{ include("forum/fragment/post_form.twig",{
-					'legend': 'Ajout d\'un message',
-					'action': path('forum.post.add', {'index': topic.id}), 
+					'legend': 'Répondre à un message',
+					'action': path('forum.post.response', {'index': postToResponse.id}), 
 					'form' : form}) }}
+			</div>
+			
+			{# la liste des messages précédents #}
+			<div class="col-xs-12 col-md-4">
+				<div class="well">
+					<div class="list-group">
+					
+					<div class="list-group-item">
+						<h4 class="list-group-item-heading">{{ postToResponse.title }}</h4>
+						<p class="list-group-item-text">{{ postToResponse.text|markdown }}</p>
+					</div>	
+					
+					{% for post in postToResponse.posts %}
+					
+					<div class="list-group-item">
+						<h4 class="list-group-item-heading">{{ post.title }}</h4>
+						<p class="list-group-item-text">{{ post.text|markdown }}</p>
+					</div>	
+					{% endfor %}
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
