--- a/src/LarpManager/Views/forum/topic.twig
+++ b/src/LarpManager/Views/forum/topic.twig
@@ -8,32 +8,37 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-12">
 			
-			<div class="panel">
+			<div class="well">
+				<h6>{{ topic.title }}</h6>
+				{{ topic.description }}
+			</div>
+			<div class="panel panel-default">
 				<div class="panel-heading">
+					<div class="pull-right">
+							<a class="btn btn-primary" href="{{ path('forum.topic.add',{'index': topic.id}) }}">Ajouter un nouveau sous-forum</a>
+					</div>
 					<h5>
-						<div class="pull-right">
-							<a class="btn btn-default" href="{{ path('forum.topic.add',{'index': topic.id}) }}">Ajouter un nouveau sous-forum</a>
-						</div>
-						{{ topic.title }}
-						{{ topic.description }}
+						Catégories
 					</h5>
 				</div>
 				<div class="panel-body">
+					
 					{# liste des topics #}
 					{{ include("forum/fragment/topic_list.twig", {'topics' : topic.topics}) }}
 				</div>
 			</div>
 			
-			<div class="panel">
+			<div class="panel panel-default">
 				<div class="panel-heading">
+					<div class="pull-right">
+						<small><a class="btn btn-primary" href="{{ path('forum.post.add', {'index':topic.id}) }}">Ajouter un nouveau message</a></small>
+					</div>
 					<h5>
-						<div class="pull-right">
-							<small><a class="btn btn-default" href="{{ path('forum.post.add', {'index':topic.id}) }}">Ajouter un nouveau message</a></small>
-						</div>
-						Discussions
+						Sujets de la catégorie : {{ topic.title }}
 					<h5>
 				</div>
 				<div class="panel-body">
+				
 					{# liste des posts #}
 					{{ include("forum/fragment/post_list.twig", {'posts' : topic.posts}) }}
 				</div>
