--- a/src/LarpManager/Views/forum/fragment/post_list.twig
+++ b/src/LarpManager/Views/forum/fragment/post_list.twig
@@ -13,7 +13,7 @@
 				<h6 class="list-group-item-heading">
 					<a href="{{ path('forum.post',{'index':post.id}) }}">{{ post.title }}</a>
 				</h6>
-				Sujet démaré {{ post.creationDate|time_diff }} 	par {{ post.user.username }}
+				Sujet démaré {{ post.creationDate|time_diff }} 	par <a href="{{ path('user.view', {'id':post.user.id}) }}">{{ post.user.username }}</a>
 			</div>
 			<div class="col-xs-3 col-md-3">
 				{% set lastPost = post.posts|last %}
