--- a/src/LarpManager/Views/forum/post_response.twig
+++ b/src/LarpManager/Views/forum/post_response.twig
@@ -26,19 +26,18 @@
 			<div class="col-xs-12 col-md-4">
 				<div class="well">
 					<div class="list-group">
-					
-					<div class="list-group-item">
-						<h4 class="list-group-item-heading">{{ postToResponse.title }}</h4>
-						<p class="list-group-item-text">{{ postToResponse.text|markdown }}</p>
-					</div>	
-					
-					{% for post in postToResponse.posts %}
-					
-					<div class="list-group-item">
-						<h4 class="list-group-item-heading">{{ post.title }}</h4>
-						<p class="list-group-item-text">{{ post.text|markdown }}</p>
-					</div>	
-					{% endfor %}
+										
+						{% for post in postToResponse.posts|reverse %}
+						<div class="list-group-item">
+							<h4 class="list-group-item-heading">{{ post.title }}</h4>
+							<p class="list-group-item-text">{{ post.text|markdown }}</p>
+						</div>	
+						{% endfor %}
+						
+						<div class="list-group-item">
+							<h4 class="list-group-item-heading">{{ postToResponse.title }}</h4>
+							<p class="list-group-item-text">{{ postToResponse.text|markdown }}</p>
+						</div>	
 					</div>
 				</div>
 			</div>
